--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "navbar",
+  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,15 +14,17 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^3.0.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+   
+
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +46,24 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
-  }
+  },
+  
+    "redirectRules":
+    [
+     {
+       "type": "string",
+       "comment": "this rule is applied first",
+       "expression": "/index.htm",
+       "location": "/home.html"
+     },
+     {
+       "type": "wildcard",
+       "expression": "/items/*?page=*",
+       "location": "/<$page$>?item=<$wildcard(1)$>",
+       "code": 302
+     }
+   ]
+  
+ 
+  
 }
