--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.7.0",
     "components": "^0.1.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-rnd": "^10.3.5",
     "react-router": "^6.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.0",
+    "recharts": "^2.1.8",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "url-loader": "^4.1.1"
   }
 }
