--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "navbar",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,8 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
-
+    
   },
   "eslintConfig": {
     "extends": [
@@ -49,23 +47,18 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  
-    "redirectRules":
-    [
-     {
-       "type": "string",
-       "comment": "this rule is applied first",
-       "expression": "/index.htm",
-       "location": "/home.html"
-     },
-     {
-       "type": "wildcard",
-       "expression": "/items/*?page=*",
-       "location": "/<$page$>?item=<$wildcard(1)$>",
-       "code": 302
-     }
-   ]
-  
- 
-  
+  "redirectRules": [
+    {
+      "type": "string",
+      "comment": "this rule is applied first",
+      "expression": "/index.htm",
+      "location": "/home.html"
+    },
+    {
+      "type": "wildcard",
+      "expression": "/items/*?page=*",
+      "location": "/<$page$>?item=<$wildcard(1)$>",
+      "code": 302
+    }
+  ]
 }
