--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -48,8 +47,8 @@
     ]
   },
   "devDependencies": {
-    "url-loader": "^4.1.1",
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "url-loader": "^4.1.1"
   },
   "redirectRules": [
     {
